fixed image url being windows, and maybe text on tablets

--- a/public/app/www/css/main.css
+++ b/public/app/www/css/main.css
@@ -66,7 +66,9 @@ header a:hover {
       Index only css
 */
 
-
+.index .header .info  {
+  word-wrap: break-word;
+}
 .index .header .content {
   margin-left:10px;
 }
